src/test/ui/issues/issue-69455.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-69455.rs:29:20
   |
LL |     type Output;
   |     ------------ `<Self as Test<Rhs>>::Output` defined here
...
LL |     println!("{}", 23u64.test(xs.iter().sum()));
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                    |
   |                    this method call resolves to `<Self as Test<Rhs>>::Output`
   |                    cannot infer type for type parameter `T` declared on the associated function `new_display`
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
  --> $DIR/issue-69455.rs:29:26
   |
LL |     println!("{}", 23u64.test(xs.iter().sum()));
   |                          ^^^^ cannot infer type for type parameter `Rhs` declared on the trait `Test`
   |
note: multiple `impl`s satisfying `u64: Test<_>` found
  --> $DIR/issue-69455.rs:11:1
   |
LL | impl Test<u32> for u64 {
   | ^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Test<u64> for u64 {
   | ^^^^^^^^^^^^^^^^^^^^^^
help: consider specifying the type argument in the method call
   |
LL |     println!("{}", 23u64.test(xs.iter().sum::<S>()));
   |                                            +++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
